[package]
name = "postprocessing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globset = "0.4"
indicatif = { version = "0.16.2", features = ["rayon"] }
lazy_static = "1.4"
rayon = "1.5"
regex = "1.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
url = "2.2.2"
