[package]
name = "sentry_events"
version = "0.1.0"
authors = ["dmitry.dygalo <dadygalo@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"]}
serde_json = "1"
structopt = "0.3"
rayon = "1.5"
glob = "0.3"
parse_link_header = "0.2"
